# corazon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
models/: logistic_regression_v1.joblib  logistic_regression_v1.pkl  simple_logistic_regression.joblib
models/mlflow_lr_model_1/: MLmodel  input_example.json  model.pkl  serving_input_example.json
notebooks/: README.md
notebooks/1-data/: 01-LMG-download_data_21_02_2026.ipynb  01_LMG_download_data_21_02_2026.ipynb
notebooks/2-exploration/: 01_LMG_exploration_22_02_2026.ipynb  01_LMG_explore.ipynb
notebooks/3-analysis/: 01_LMG_univariate_eda.ipynb  02-bivariate_analysis.ipynb  02_LMG_eda_univariado_23_02_2026.ipynb  03-multivariate_analysis.ipynb
notebooks/4-feat_eng/: 01-feature_engineering_pipeline.ipynb
notebooks/5-models/: 01-baseline_model.ipynb  01-first_model_logistic_regression.ipynb  01-model_selection.ipynb
notebooks/6-interpretation/: 01-model_interpretation.ipynb
notebooks/7-deploy/: app.py
src/data/: clean_data.py  loader.py
src/inference/: predict.py
src/model/: evaluation.py
src/pipelines/feature_pipeline/: build_features.py
src/pipelines/inference_pipeline/: inference_pipeline.py
src/pipelines/training_pipeline/: train_pipeline.py
tests/data/: conftest.py  test_clean_data.py  test_loader.py
tests/inference/: test_predict.py
tests/model/: conftest.py  test_evaluation.py
tests/pipelines/feature_pipeline/: __init__.py  conftest.py  test_feature_pipeline.py
tests/pipelines/inference_pipeline/: test_inference_pipeline.py
(+1 files in other folders)
