[project]
name = "corazon"
version = "0.1.0"
description = "primer proyecto CDP"
authors = [
    "Laura Granda <laura.granda@upb.edu.co>",
]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pandas[parquet]==2.3.3",
    "seaborn>=0.13.2",
]

[project.urls]
documentation = "https://LauraGranda.github.io/corazon"
repository = "https://github.com/LauraGranda/corazon"


[dependency-groups]
dev = [
    "pre-commit>=4.5.1", # Code linting and formatting
    "pytest>=9.0.2", # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=7.0.0",
    "cruft[pyproject]>=2.16.0",# Automated Cookiecutter template synchronization
    "matplotlib>=3.10.8",
]

#
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.19",
]
#

[tool.uv]
package = false
default-groups = [
    "dev",
#
    "docs",
#
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
